name:                bosh-cpi-haskell
version:             0.0.1.0
synopsis:            A library to build BOSH Cloud Provider Interfaces with Haskell
description:         Please see README.md
homepage:            https://github.com/SAP/bosh-cpi-haskell#readme
license:             Apache
license-file:        LICENSE
author:              Jan von Löwenstein
maintainer:          jan.von.loewenstein@sap.com
copyright:           2017 SAP SE
category:            Cloud
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- ghc-options:        -Wall
  default-extensions:  OverloadedStrings
                     , GeneralizedNewtypeDeriving
  hs-source-dirs:      src
  exposed-modules:     CPI.Base
                     , CPI.Base.AgentConfig
                     , CPI.Base.Data
                     , CPI.Base.Errors
                     , CPI.Base.Request
                     , CPI.Base.Response
                     , CPI.Base.System
                     , Aeson.Helpers
                     , Control.Monad.Arguments
                     , Control.Monad.Stub.Arguments
                     , Control.Monad.Console
                     , Control.Monad.Stub.Console
                     , Control.Monad.FileSystem
                     , Control.Monad.Stub.FileSystem
                     , Control.Monad.Wait
                     , Control.Monad.Stub.Wait
                     , Control.Monad.Stub.StubMonad
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , unordered-containers
                     , aeson
                     , lens
                     , mtl
                     , safe-exceptions
                     , logging-effect
                     , wl-pprint-text
  default-language:    Haskell2010

test-suite unit
  default-extensions:  OverloadedStrings
                     , GeneralizedNewtypeDeriving
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       CPI.BaseSpec
                     , CPI.Base.AgentConfigSpec
                     , CPI.Base.RequestSpec
                     , CPI.Base.SystemSpec
                     , CPI.Base.TestSupport
                     , Control.Monad.WaitSpec
                     , Control.Monad.TestSupport
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , text
                     , bytestring
                     , aeson
                     , aeson-qq
                     , lens
                     , unordered-containers
                     , mtl
                     , either
                     , safe-exceptions
                     , raw-strings-qq
                     , bosh-cpi-haskell
                     , logging-effect
                     , wl-pprint-text
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SAP/haskell-bosh-cpi
